Fix template blocks paddings on small screens

--- a/varia/style-editor.css
+++ b/varia/style-editor.css
@@ -1204,7 +1204,7 @@ table th,
 
 .template-block .site-header,
 .template-block .site-footer {
-	padding: 16px 0;
+	padding: 16px;
 }
 
 @media only screen and (min-width: 560px) {
